Add latest position from Chalmers

--- a/Cover_letters/4_NVIDIA_CL.tex
+++ b/Cover_letters/4_NVIDIA_CL.tex
@@ -144,3 +144,151 @@ Khalil Al Handawi
 \medskip % Extra whitespace before the next section
 
 %----------------------------------------------------------------------------------------
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Freeman Curriculum Vitae
+% XeLaTeX Template
+% Version 2.0 (19/3/2018)
+%
+% This template originates from:
+% http://www.LaTeXTemplates.com
+%
+% Authors:
+% Vel (vel@LaTeXTemplates.com)
+% Alessandro Plasmati
+%
+% License:
+% CC BY-NC-SA 3.0 (http://creativecommons.org/licenses/by-nc-sa/3.0/)
+%
+%!TEX program = xelatex
+% NOTICE: This template must be compiled with XeLaTeX, the line above should
+% ensure this happens automatically but if it doesn't you will need to specify 
+% XeLaTeX as the engine in your editor or script
+% 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+%----------------------------------------------------------------------------------------
+%	PACKAGES AND OTHER DOCUMENT CONFIGURATIONS
+%----------------------------------------------------------------------------------------
+
+\documentclass[12pt]{article} % Font size, can be: 10pt, 11pt or 12pt
+
+\input{structure.tex} % Include the file that specifies the document structure
+
+% Headers and footers can be added with the \lhead{} \rhead{} \lfoot{} \rfoot{} commands
+% Example right footer:
+%\rfoot{\color{headings}{\sffamily Last update: \today. Typeset with Xe\LaTeX}}
+
+%----------------------------------------------------------------------------------------
+%	 PERSONAL INFORMATION
+%----------------------------------------------------------------------------------------
+
+% If you don't need one or more of the below, just remove the content leaving the command, e.g. \cvnumberphone{}
+
+\profilepic{} % Profile picture
+
+\cvname{Khalil Al Handawi, PhD} % Your name
+\cvjobtitle{Engineer, designer, and researcher} % Job title/career
+
+\cvdate{} % Date of birth
+\cvaddress{Montr\'{e}al Qu\'{e}bec, Canada} % Short address/location, use \newline if more than 1 line is required
+\cvnumberphone{+1 (514) 572-7367} % Phone number
+\cvsite{sol.research.mcgill.ca} % Personal website
+\cvmail{khalil.alhandawi@mail.mcgill.ca} % Email address
+\cvgithub{github.com/khbalhandawi} % GitHub
+\cvlinkedin{linkedin.com/in/khbalhandawi} % LinkedIn
+
+\aboutme{I believe that physics and artificial intelligence should be two sides of the same coin. One cannot exist without the other. How? By cross-validation. In this way, the toughest physics and mathematics problems can be solved! This philosophy is what drives my research.} % To have no About Me section, just remove all the text and leave \aboutme{}
+
+\begin{document}
+
+\begin{paracol}{2} % Begin the multi-column environment
+
+%----------------------------------------------------------------------------------------
+%	NAME AND CURRICULUM VITAE TEXT
+%----------------------------------------------------------------------------------------
+
+\parbox[top][0.1\textheight][c]{\linewidth}{ % Parbox to hold the author name and CV text; fixed height to match the coloured box to the right, centred vertically and full line width
+	\vspace{0.0\textheight} % Reduce whitespace above the parbox to separate it from the main content
+	\centering % Centre text
+	{\sffamily\Huge \cvname}\\\medskip % Your name
+}
+
+%----------------------------------------------------------------------------------------
+
+\switchcolumn % Switch to the next paracol column
+
+%----------------------------------------------------------------------------------------
+%	COLOURED CONTACT DETAILS BOX
+%----------------------------------------------------------------------------------------
+
+\parbox[top][0.1\textheight][c]{\linewidth}{ % Parbox to hold the colour box; fixed height to match the name/CV text to the left, centred vertically and full line width
+	\vspace{0\textheight} % Reduce whitespace above the parbox to separate it from the main content
+	\colorbox{shade}{ % Create the coloured box
+		\begin{supertabular}{p{0.05\linewidth}|p{0.775\linewidth}} % Start a table with two columns, the table will ensure everything is aligned
+			\ifthenelse{\equal{\cvdate}{}}{}{\raisebox{-1pt}{\faInfo} & \cvdate \\}
+			\ifthenelse{\equal{\cvaddress}{}}{}{\raisebox{-1pt}{\faHome} & \cvaddress \\} % Address
+			\ifthenelse{\equal{\cvaddress}{}}{}{\raisebox{-1pt}{\faPhone} & \cvnumberphone \\} % Phone number
+			\ifthenelse{\equal{\cvmail}{}}{}{\raisebox{0pt}{\small\faEnvelope} & \href{mailto:\cvmail}{\cvmail} \\} % Email address
+			\ifthenelse{\equal{\cvgithub}{}}{}{\raisebox{-1pt}{\faGithub} & \href{https://\cvgithub}{\cvgithub} \\} % GitHub profile
+			\ifthenelse{\equal{\cvlinkedin}{}}{}{\raisebox{-1pt}{\faLinkedinSquare} & \href{https://\cvlinkedin}{\cvlinkedin} \\} % LinkedIn profile
+			% See fontawesome.pdf in the fonts folder for all icons you can use
+		\end{supertabular}
+	}
+}
+
+\end{paracol}
+
+\medskip % Extra whitespace before the next section
+\rule[0pt]{\textwidth}{1pt}\\
+%----------------------------------------------------------------------------------------
+%	ADDRESS
+%----------------------------------------------------------------------------------------
+\today\\[6pt]
+Andrea Malloni\\
+HR manager, Human Resources\\
+\textit{NVIDIA}\\
+Toronto, Ontario, Canada\\[6pt] \medskip
+%----------------------------------------------------------------------------------------
+%	MAIN BODY
+%----------------------------------------------------------------------------------------
+Dear Ms. Malloni,
+
+\medskip % Extra whitespace before the next section 
+I would like to express my enthusiasm for the opportunity to intern at NVIDIA as a research engineer. My formal training and education is in mechanical engineering but I have worked heavily in the area of design optimization, surrogate modeling, and machine learning during my doctoral studies and have published relevant research in these fields. Having just completed my degree, I am looking for the next challenge that I can address with the help of the talented scientists and engineers at NVIDIA
+
+\medskip % Extra whitespace before the next section
+
+I believe that my strong mathematical and simulation skills, (albeit, intended for mechanical and dynamic systems) combined with my experience in building and deploying deep learning models (as web applications) aligns well with the position and the expected outcomes. I have a love for automating mundane tasks and workflows through software and intuitive UIs which has led me to train myself in the fundamentals of scientific computing (through CUDA and parallel computing), user interfaces (Qt and web applications), and machine learning (recurrent neural networks, sequence-to-sequence translators, and parametric models). Although my degrees do not reflect the aforementioned skillset, I have published several peer-reviewed articles that feature these skills (listed in my CV).
+
+\medskip % Extra whitespace before the next section
+
+I have been mainly focused on the aerospace and health sectors during my doctoral research and would like to impact as many application domains as possible. After attending several GTC talks and chatting with several presenters, I realized that the work environment at NVIDIA provides the perfect opportunity to work on a wide array of applications for AI and GPU computing. The applications vary all the way from space exploration to micro-biology and medical imaging. The multidisciplinary nature of the work done at NVIDIA is so inspirational and aligns well with my career goals.
+
+\medskip % Extra whitespace before the next section
+
+I wanted to explore something different that I could only find at NVIDIA. That is the opportunity to work on something cool and fun that can benefit all of human-kind such as video games, immersive virtual worlds, and even space exploration; not just topics related to mechanical engineering. 
+
+\medskip % Extra whitespace before the next section
+
+I hope you enjoy going through my portfolio (\href{https://khbalhandawi.github.io/projects/}{https://khbalhandawi.github.io/projects/}) and I hope we can discuss all of this. Needless to say, I am a huge fan of the technologies and products enabled by NVIDIA's GPUs! I feel that this passion will push me far beyond my abilities. Ever since I was a kid, working with computer technology leaders is all I ever wanted to do and seeing this opportunity, I think it could actually happen!
+
+% I realize that being a research scientist entails three things: 1) Mentorship and supervision acumen 2) Strong research skills 3) Good communication skills to present key takeaways from cutting-edge research.
+
+% I have ample experience with all three fields and thrive on mentoring and teaching my students. Nothing gives me a greater sense of joy than hearing about the accomplishments of my students. As you can tell from my career profile, I made it a habit to always engage in research and mentorship simultaneously and never turned away anyone that asks for my opinion or guidance.
+
+% I have a strong mathematical background in research related to numerical optimization, simulation and data-driven models. I combined these three aspects to automate time-consuming simulation-based design problems in the aerospace industry and was able to transform my ideas into industrial practice through the training programs and workshops that I conducted for our industrial partners (GKN Aerospace). Due to my multidisciplinary skillset I even ventured into epidemiology when the COVID-19 pandemic struck and developed detailed agent-based models (accelerated by CUDA) for forecasting the trajectory of the epidemic. I came up intervention policies that help governments make decisions when little is known about the pandemic.
+
+
+\medskip % Extra whitespace before the next section
+
+Yours sincerely,
+
+\medskip % Extra whitespace before the next section
+
+Khalil Al Handawi
+
+\medskip % Extra whitespace before the next section
+
+%----------------------------------------------------------------------------------------
+
+\end{document}
