--- a/Khalil_CV.tex
+++ b/Khalil_CV.tex
@@ -211,7 +211,7 @@
 	{}{} % Description
 	\tableentry{$\bullet$}{Integrate my doctoral research on design under uncertainty into the activities of the SED lab.}{}
 	\tableentry{$\bullet$}{Develop a margin analysis library for change propagation management in engineering systems.}{}
-	\tableentry{$\bullet$}{Conduct research into design margins and links to probablistic quantities such as reliability.}{}
+	\tableentry{$\bullet$}{Conduct research into design margins and links to probabilistic quantities such as reliability.}{}
 	\tableentry{$\bullet$}{Foster collaborations with the industry (GKN Aerospace) and write research proposals.}{spaceafter}
 
 	%------------------------------------------------
@@ -222,9 +222,10 @@
 	{Montr\'{e}al, Canada} % Location
 	{Postdoctoral Researcher} % Job title
 	{}{} % Description
-	\tableentry{$\bullet$}{Developed a deep learning forecasting model for COVID-19 trajectories based on sample viral load measurements from the general population: \href{https://covid-forecaster-lebanon.herokuapp.com/}{https://covid-forecaster-lebanon.herokuapp.com/}.}{}
-	\tableentry{$\bullet$}{Built and published a stochastic model of the spread of COVID-19 in a population using agent-based approaches and used stochastic optimization algorithms to solve for public health policies.}{}
-	\tableentry{$\bullet$}{Applied stochastic optimization to hyperparameter optimization problems in machine learning.}{}
+	\tableentry{$\bullet$}{Developed a deep learning forecasting model for COVID-19 trajectories based on cross-sectional patient data. The forecasting model is a sequence-to-sequence model that uses encoder and decoder RNNs with attention to transform cross-sectional patient data to a COVID-19 trajectory.}{}
+	\tableentry{$\bullet$}{Deployed the trained forecasting model online for public use: \href{https://covid-forecaster-lebanon.herokuapp.com/}{https://covid-forecaster-lebanon.herokuapp.com/}.}{}
+	\tableentry{$\bullet$}{Applied novel stochastic optimization techniques for hyperparameter optimization problems in machine learning and used them to fine tune the sequence-to-sequence model.}{}
+	\tableentry{$\bullet$}{Built and published a stochastic model of the spread of COVID-19 in a population using artificial life models (agent-based approaches) and used stochastic optimization algorithms to solve for optimal public health policies \href{https://github.com/khbalhandawi/COVID_SIM_GPU}{https://github.com/khbalhandawi/COVID\_SIM\_GPU}.}{}
 	\tableentry{$\bullet$}{Lectured the engineering systems optimization class and developed MATLAB training modules and projects related to multidisciplinary optimization (NoHiMDO) with applications to aircraft design.}{spaceafter}
 
 	%------------------------------------------------
@@ -238,7 +239,8 @@
 	\tableentry{$\bullet$}{Won a Fonds de Recherche du Qu\'{e}bec Nature et Technologie (FRQNT) grant (56,000 CAD).}{}
 	\tableentry{$\bullet$}{Authored an agent-based simulation tool for modeling the spread of COVID-19 to be used as part of operations research and public health policy-making research.}{}
 	\tableentry{$\bullet$}{Developed mathematical frameworks for quantifying design flexibility and robustness and managing uncertain requirements in aircraft system and subsystem design.}{}
-	\tableentry{$\bullet$}{Developed a thermomechanical simulation model for modeling additive manufacturing repair and life extension processes.}{}
+	\tableentry{$\bullet$}{Developed a thermomechanical simulation model for modeling additive manufacturing repair and life extension processes using transient coupled thermal/mechanical FEA simulations.}{}
+	\tableentry{$\bullet$}{Write automation scripts using NX Siemens and Abaqus Python APIs to automate geometry generation, meshing, anaylsis, and postprocessing of parametric simulations.}{}
 	\tableentry{$\bullet$}{Co-developed a novel lifecycle cost model based on system dynamics to model the effect of life extension on lifecycle costs.}{}
 	\tableentry{$\bullet$}{Used machine learning models to substitute expensive thermomechanical simulations in design studies and developed a variant of kernel smoothing for estimating the sensitivity of design solutions to different requirements by using a Jacobian matrix.}{spaceafter}
 
@@ -464,7 +466,7 @@ A. Khalil, \textbf{K. Al Handawi}, Z. Mohsen, A. Abdel Nour, R. Feghali, I. Cham
 %----------------------------------------------------------------------------------------
 %	SPECIAL ELECTIVE COURSES
 %----------------------------------------------------------------------------------------
-
+\newpage
 \section{Course work}
 
 %------------------------------------------------
