--- a/Cover_letters/GE/Cover_letter.tex
+++ b/Cover_letters/GE/Cover_letter.tex
@@ -108,19 +108,23 @@ Toronto, Ontario, Canada\\[6pt] \medskip
 Dear Ms. Malloni,
 
 \medskip % Extra whitespace before the next section 
-I already applied to another similar posting on the NVIDIA website so I apologize if this is considered a duplicate application. Its just that I feel very passionate about conducting research at NVIDIA and would love the chance to bring my ideas and expertise to your team.
+I would like to express my enthusiasm for the opportunity to intern at NVIDIA as a research engineer. My formal training and education is in mechanical engineering but I have worked heavily in the area of design optimization, surrogate modeling, and machine learning during my doctoral studies and have published relevant research in these fields. Having just completed my degree, I am looking for the next challenge that I can address with the help of the talented scientists and engineers at NVIDIA
 
 \medskip % Extra whitespace before the next section
 
-I believe that my strong mathematical and simulation skills, combined with my love for mentoring and guiding others will add a lot of value to the research done at NVIDIA. Nothing gives me a greater sense of joy than hearing about the accomplishments of my students. I was so excited to learn about the wide array of applications for AI and GPU computing when I watched several GTC talks and chatted with experts. The applications vary all the way from space exploration to micro-biology and medical imaging. The multidisciplinary nature of the work done at NVIDIA is so inspirational and aligns well with my career goals.
+I believe that my strong mathematical and simulation skills, (albeit, intended for mechanical and dynamic systems) combined with my experience in building and deploying deep learning models (as web applications) aligns well with the position and the expected outcomes. I have a love for automating mundane tasks and workflows through software and intuitive UIs which has led me to train myself in the fundamentals of scientific computing (through CUDA and parallel computing), user interfaces (Qt and web applications), and machine learning (recurrent neural networks, sequence-to-sequence translators, and parametric models). Although my degrees do not reflect the aforementioned skillset, I have published several peer-reviewed articles that feature these skills (listed in my CV).
 
 \medskip % Extra whitespace before the next section
 
-Although I am happy with my current job working as a researcher at McGill and coming up with my own research ideas, guiding and supervising students to make their ideas a reality, I wanted to explore something different that I could only find at NVIDIA. That is the opportunity to work on something cool and fun that can benefit all of human-kind such as video games, immersive virtual worlds, and even space exploration; not just topics related to engineering. 
+I have been mainly focused on the aerospace and health sectors during my doctoral research and would like to impact as many application domains as possible. After attending several GTC talks and chatting with several presenters, I realized that the work environment at NVIDIA provides the perfect opportunity to work on a wide array of applications for AI and GPU computing. The applications vary all the way from space exploration to micro-biology and medical imaging. The multidisciplinary nature of the work done at NVIDIA is so inspirational and aligns well with my career goals.
 
 \medskip % Extra whitespace before the next section
 
-I hope you enjoy going through my profile and my projects on GitHub (linked in my CV) and I hope we can discuss all of this. Needless to say, I am a huge fan of the technologies and products enabled by NVIDIA's GPUs! I feel that this passion will push me far beyond my abilities. Ever since I was a kid, working with computer technology leaders is all I ever wanted to do and seeing this opportunity, I think it could actually happen!
+I wanted to explore something different that I could only find at NVIDIA. That is the opportunity to work on something cool and fun that can benefit all of human-kind such as video games, immersive virtual worlds, and even space exploration; not just topics related to mechanical engineering. 
+
+\medskip % Extra whitespace before the next section
+
+I hope you enjoy going through my portfolio (\href{https://khbalhandawi.github.io/projects/}{https://khbalhandawi.github.io/projects/}) and I hope we can discuss all of this. Needless to say, I am a huge fan of the technologies and products enabled by NVIDIA's GPUs! I feel that this passion will push me far beyond my abilities. Ever since I was a kid, working with computer technology leaders is all I ever wanted to do and seeing this opportunity, I think it could actually happen!
 
 % I realize that being a research scientist entails three things: 1) Mentorship and supervision acumen 2) Strong research skills 3) Good communication skills to present key takeaways from cutting-edge research.
 
