Add NSERC award

--- a/Khalil_CV.tex
+++ b/Khalil_CV.tex
@@ -715,6 +715,11 @@ A. Khalil, \textbf{K. Al Handawi}, Z. Mohsen, A. Abdel Nour, R. Feghali, I. Cham
 	
 	%------------------------------------------------
 	
+	\tableentryrawthree{\textsc{March 2021 – Dec 2021}}{\textbf{Postdoctoral fellowship (PDF)}}{90,000 CAD}{spaceafter}
+	\tableentryrawthree{}{\textit{National Sciences and Engineering Research council Canada}}{}{spaceafter}
+
+	%------------------------------------------------
+	
 	\tableentryrawthree{\textsc{May 2019 – Dec 2021}}{\textbf{Doctoral Research award (B2X)}}{56,000 CAD}{spaceafter}
 	\tableentryrawthree{}{\textit{Fonds de Recherche du Qu\'{e}bec - Nature et Technologies}}{}{spaceafter}
 	
@@ -740,7 +745,7 @@ A. Khalil, \textbf{K. Al Handawi}, Z. Mohsen, A. Abdel Nour, R. Feghali, I. Cham
 \begin{supertabular}{>{\raggedright\arraybackslash}p{0.77\linewidth}>{\raggedleft\arraybackslash}p{0.19\linewidth}} % Start a table with three columns, the table will ensure everything is aligned
 	
 	%------------------------------------------------
-
+	
 	\tableentryraw{Awarded 2nd place for final problem presentation and winner of best data visualization in the 11th Montreal Industreal Problem Solving Workshop}{\textsc{IVADO, Universit\'{e} de Montr\'{e}al, Canada}}{}
 
 	\tableentryraw{Team leader of the first team to successfully qualify and complete the Baja SAE competition}{\textsc{Khalifa University, Abu Dhabi, UAE}}{}
@@ -778,7 +783,7 @@ A. Khalil, \textbf{K. Al Handawi}, Z. Mohsen, A. Abdel Nour, R. Feghali, I. Cham
 
 	\tableentryraw{Sensors and Actuators A}{\textsc{2}}{}
 
-	\tableentryraw{IEEE Access}{\textsc{3}}{}
+	\tableentryraw{IEEE Access}{\textsc{5}}{}
 
 	\tableentryraw{Journal of Global Optimization}{\textsc{1}}{}
 	
