Add NSERC award

--- a/Khalil_CV.tex
+++ b/Khalil_CV.tex
@@ -203,7 +203,7 @@
 
 	%------------------------------------------------
 
-	\workposition{Sep 2021 -- present} % Duration
+	\workposition{Sep 2021 -- Dec 2021} % Duration
 	{} % FT/PT (full time or part time)
 	{Systems Engineering Design Lab, Chalmers University of Technology} % Employer
 	{G\"{o}teborg, Sweden} % Location
@@ -355,6 +355,11 @@
 
 \begin{supertabular}{>{\raggedleft\arraybackslash}p{0.17\linewidth}p{0.6\linewidth}>{\raggedleft\arraybackslash}p{0.17\linewidth}} % Start a table with three columns, the table will ensure everything is aligned
 	
+	%------------------------------------------------
+	
+	\tableentryrawthree{\textsc{Mar 2021 – Dec 2021}}{\textbf{Postdoctoral fellowship (PDF)}}{90,000 CAD}{}
+	\tableentryrawthree{}{\textit{National Sciences and Engineering Research council Canada}}{}{spaceafter}
+
 	%------------------------------------------------
 	
 	\tableentryrawthree{\textsc{May 2019 – Dec 2021}}{\textbf{Doctoral Research award (B2X)}}{56,000 CAD}{}
