Add NSERC award

--- a/Khalil_resume.tex
+++ b/Khalil_resume.tex
@@ -133,6 +133,10 @@
 	%------------------------------------------------
 
 	\begin{supertabular}{rl} % Start a table with two columns, the table will ensure everything is aligned
+		%------------------------------------------------
+		
+		\tableentry{2021}{\textbf{Postdoctoral fellowship}}{}
+		\tableentry{}{\textit{NSERC Canada}}{spaceafter}
 
 		%------------------------------------------------
 
@@ -140,9 +144,6 @@
 		\tableentry{}{\textit{Fonds de Recherche du Qu\'{e}bec}}{spaceafter}
 
 		%------------------------------------------------
-
-		\tableentry{2017}{\textbf{McGill engineering doctoral award}}{}
-		\tableentry{}{\textit{McGill University}}{spaceafter}
 
 	\end{supertabular}
 }
