update for UdeM position

--- a/Khalil_CV.tex
+++ b/Khalil_CV.tex
@@ -182,6 +182,30 @@
 
 	%------------------------------------------------
 
+	\workposition{May 2022 -- present} % Duration
+	{} % FT/PT (full time or part time)
+	{Department of Computer Science and Operations Research,\\ Universit\'{e} de Montr\'{e}al} % Employer
+	{Montr\'{e}al, Canada} % Location
+	{Postdoctoral Researcher} % Job title
+	{}{} % Description
+	\tableentry{$\bullet$}{Won a Natural Sciences and Engineering Research Council of Canada (NSERC) fellowship to pursue research at UdeM.}{}
+	\tableentry{$\bullet$}{Work with the International Air Transport Association (IATA) to develop data analytics solutions for codesharing and flight scheduling in the civil aviation industry.}{}
+	\tableentry{$\bullet$}{Assess the effectiveness and impact of the IATA operation safety audit (IOSA) on air travel accessibility and cooperation between airlines.}{}
+
+	%------------------------------------------------
+
+	\workposition{Jan 2021 -- Apr 2022} % Duration
+	{} % FT/PT (full time or part time)
+	{Systems Optimization Lab, McGill University} % Employer
+	{Montr\'{e}al, Canada} % Location
+	{Postdoctoral Researcher} % Job title
+	{}{} % Description
+	\tableentry{$\bullet$}{Developed a deep learning now-casting model for COVID-19 trajectories based on cross-sectional patient data.}{}
+	\tableentry{$\bullet$}{Applied novel stochastic optimization techniques for hyperparameter optimization problems in machine learning.}{}
+	\tableentry{$\bullet$}{Built and published a stochastic model of the spread of COVID-19 in a population using agent-based approaches to identify optimal public health policies.}{spaceafter}
+	
+	%------------------------------------------------
+
 	\workposition{Sep 2021 -- Dec 2021} % Duration
 	{} % FT/PT (full time or part time)
 	{Systems Engineering Design Lab, Chalmers University of Technology} % Employer
@@ -193,18 +217,6 @@
 	\tableentry{$\bullet$}{Research design margins and links to probabilistic quantities(reliability).}{}
 	\tableentry{$\bullet$}{Foster collaboration with industry (GKN Aerospace) and write research proposals.}{spaceafter}
 
-	%------------------------------------------------
-
-	\workposition{Jan 2021 -- present} % Duration
-	{} % FT/PT (full time or part time)
-	{Systems Optimization Lab, McGill University} % Employer
-	{Montr\'{e}al, Canada} % Location
-	{Postdoctoral Researcher} % Job title
-	{}{} % Description
-	\tableentry{$\bullet$}{Developed a deep learning now-casting model for COVID-19 trajectories based on cross-sectional patient data.}{}
-	\tableentry{$\bullet$}{Applied novel stochastic optimization techniques for hyperparameter optimization problems in machine learning.}{}
-	\tableentry{$\bullet$}{Built and published a stochastic model of the spread of COVID-19 in a population using agent-based approaches to identify optimal public health policies.}{spaceafter}
-	
 	%------------------------------------------------
 
 	\workposition{Jan 2017 -- Jan 2021} % Duration
@@ -285,6 +297,7 @@
 %	MANAGEMENT EXPERIENCE
 %----------------------------------------------------------------------------------------
 
+\newpage
 \hrule \medskip \textbf{\large Management}\medskip 
 
 %------------------------------------------------
@@ -715,7 +728,7 @@ A. Khalil, \textbf{K. Al Handawi}, Z. Mohsen, A. Abdel Nour, R. Feghali, I. Cham
 	
 	%------------------------------------------------
 	
-	\tableentryrawthree{\textsc{March 2021 – Dec 2021}}{\textbf{Postdoctoral fellowship (PDF)}}{90,000 CAD}{spaceafter}
+	\tableentryrawthree{\textsc{May 2022 – Apr 2024}}{\textbf{Postdoctoral fellowship (PDF)}}{90,000 CAD}{spaceafter}
 	\tableentryrawthree{}{\textit{National Sciences and Engineering Research council Canada}}{}{spaceafter}
 
 	%------------------------------------------------
@@ -765,7 +778,7 @@ A. Khalil, \textbf{K. Al Handawi}, Z. Mohsen, A. Abdel Nour, R. Feghali, I. Cham
 %----------------------------------------------------------------------------------------
 %	REVIEW SERVICE
 %----------------------------------------------------------------------------------------
-\newpage
+
 \section{Review service}
 
 %------------------------------------------------
@@ -962,7 +975,6 @@ A. Khalil, \textbf{K. Al Handawi}, Z. Mohsen, A. Abdel Nour, R. Feghali, I. Cham
 %----------------------------------------------------------------------------------------
 %	REFERENCES
 %----------------------------------------------------------------------------------------
-\newpage
 \section{References}
 
 %\textit{References available on request}
