--- a/Khalil_CV_semiacademic.tex
+++ b/Khalil_CV_semiacademic.tex
@@ -203,20 +203,19 @@
 
 	%------------------------------------------------
 
-	\workposition{Sep 2021 -- Dec 2021} % Duration
+	\workposition{May 2022 -- present} % Duration
 	{} % FT/PT (full time or part time)
-	{Systems Engineering Design Lab, Chalmers University of Technology} % Employer
-	{G\"{o}teborg, Sweden} % Location
+	{Computer Science and Operations Research, Universit\'{e} de Montr\'{e}al} % Employer
+	{Montr\'{e}al, Canada} % Location
 	{Postdoctoral Researcher} % Job title
 	{}{} % Description
-	\tableentry{$\bullet$}{Integrate my doctoral research on design under uncertainty into the activities of the SED lab.}{}
-	\tableentry{$\bullet$}{Develop a margin analysis library for change propagation management in engineering systems.}{}
-	\tableentry{$\bullet$}{Conduct research into design margins and links to probabilistic quantities such as reliability.}{}
-	\tableentry{$\bullet$}{Foster collaborations with the industry (GKN Aerospace) and write research proposals.}{spaceafter}
-
+	\tableentry{$\bullet$}{Won a Natural Sciences and Engineering Research Council of Canada (NSERC) fellowship to pursue research at UdeM.}{}
+	\tableentry{$\bullet$}{Work with the International Air Transport Association (IATA) to develop data analytics solutions for codesharing and flight scheduling in the civil aviation industry.}{}
+	\tableentry{$\bullet$}{Assess the effectiveness and impact of the IATA operation safety audit (IOSA) on air travel accessibility and cooperation between airlines.}{spaceafter}
+	
 	%------------------------------------------------
 
-	\workposition{Jan 2021 -- present} % Duration
+	\workposition{Jan 2021 -- Apr 2022} % Duration
 	{} % FT/PT (full time or part time)
 	{Systems Optimization Lab, McGill University} % Employer
 	{Montr\'{e}al, Canada} % Location
@@ -230,6 +229,19 @@
 
 	%------------------------------------------------
 
+	\workposition{Sep 2021 -- Dec 2021} % Duration
+	{} % FT/PT (full time or part time)
+	{Systems Engineering Design Lab, Chalmers University of Technology} % Employer
+	{G\"{o}teborg, Sweden} % Location
+	{Postdoctoral Researcher} % Job title
+	{}{} % Description
+	\tableentry{$\bullet$}{Integrate my doctoral research on design under uncertainty into the activities of the SED lab.}{}
+	\tableentry{$\bullet$}{Develop a margin analysis library for change propagation management in engineering systems.}{}
+	\tableentry{$\bullet$}{Conduct research into design margins and links to probabilistic quantities such as reliability.}{}
+	\tableentry{$\bullet$}{Foster collaborations with the industry (GKN Aerospace) and write research proposals.}{spaceafter}
+
+	%------------------------------------------------
+
 	\workposition{Jan 2017 -- Jan 2021} % Duration
 	{} % FT/PT (full time or part time)
 	{McGill University} % Employer
@@ -237,7 +249,6 @@
 	{Research assistant} % Job title
 	{}{}  % Description
 	\tableentry{$\bullet$}{Won a Fonds de Recherche du Qu\'{e}bec Nature et Technologie (FRQNT) grant (56,000 CAD).}{}
-	\tableentry{$\bullet$}{Authored an agent-based simulation tool for modeling the spread of COVID-19 to be used as part of operations research and public health policy-making research.}{}
 	\tableentry{$\bullet$}{Developed mathematical frameworks for quantifying design flexibility and robustness and managing uncertain requirements in aircraft system and subsystem design.}{}
 	\tableentry{$\bullet$}{Developed a thermomechanical simulation model for modeling additive manufacturing repair and life extension processes using transient coupled thermal/mechanical FEA simulations.}{}
 	\tableentry{$\bullet$}{Write automation scripts using NX Siemens and Abaqus Python APIs to automate geometry generation, meshing, anaylsis, and postprocessing of parametric simulations.}{}
@@ -341,7 +352,7 @@
 %----------------------------------------------------------------------------------------
 %	AWARDS
 %----------------------------------------------------------------------------------------
-
+\newpage
 \section{Awards and recognition}
 
 % Example \tableentry{} command to add another line:
@@ -357,7 +368,7 @@
 	
 	%------------------------------------------------
 	
-	\tableentryrawthree{\textsc{Mar 2021 – Dec 2021}}{\textbf{Postdoctoral fellowship (PDF)}}{90,000 CAD}{}
+	\tableentryrawthree{\textsc{May 2022 – Apr 2024}}{\textbf{Postdoctoral fellowship (PDF)}}{90,000 CAD}{}
 	\tableentryrawthree{}{\textit{National Sciences and Engineering Research council Canada}}{}{spaceafter}
 
 	%------------------------------------------------
@@ -471,7 +482,7 @@ A. Khalil, \textbf{K. Al Handawi}, Z. Mohsen, A. Abdel Nour, R. Feghali, I. Cham
 %----------------------------------------------------------------------------------------
 %	SPECIAL ELECTIVE COURSES
 %----------------------------------------------------------------------------------------
-\newpage
+
 \section{Course work}
 
 %------------------------------------------------
