Added ASME JMD award and COVID publication

--- a/Khalil_CV.tex
+++ b/Khalil_CV.tex
@@ -365,7 +365,7 @@
 %------------------------------------------------
 
 \begin{supertabular}{>{\raggedleft\arraybackslash}p{0.17\linewidth}p{0.6\linewidth}>{\raggedleft\arraybackslash}p{0.17\linewidth}} % Start a table with three columns, the table will ensure everything is aligned
-	
+
 	%------------------------------------------------
 	
 	\tableentryrawthree{\textsc{May 2022 – Apr 2024}}{\textbf{Postdoctoral fellowship (PDF)}}{90,000 CAD}{}
@@ -399,15 +399,17 @@
 	
 	%------------------------------------------------
 	
-	\tableentryraw{Awarded 2nd place for final problem presentation and winner of best data visualization in the 11th Montreal Industreal Problem Solving Workshop}{\textsc{IVADO, Montreal, Canada}}{}
+	\tableentryraw{Our \href{http://dx.doi.org/10.1115/1.4047908}{paper on scalable designs} was selected for the 2021 ASME Journal of Mechanical Design Editor's Choice award}{\textsc{ASME IDETC 2022, St.~Louis, USA}}{spaceafter}
 
-	\tableentryraw{Team leader of the first UAE team to successfully qualify and complete the Baja SAE competition}{\textsc{Khalifa University, Abu Dhabi, UAE}}{}
+	\tableentryraw{Awarded 2nd place for final problem presentation and winner of best data visualization in the 11th Montreal Industreal Problem Solving Workshop}{\textsc{IVADO, Montreal, Canada}}{spaceafter}
 
-	\tableentryraw{Awarded 2nd place in the Abu Dhabi Solar Challenge (10,000 AED)}{\textsc{Khalifa University, Abu Dhabi, UAE}}{}
+	\tableentryraw{Team leader of the first UAE team to successfully qualify and complete the Baja SAE competition}{\textsc{Khalifa University, Abu Dhabi, UAE}}{spaceafter}
 
-	\tableentryraw{Recognition for volunteering for the graduate School and student affair's events}{\textsc{Khalifa University, Abu Dhabi, UAE}}{}
+	\tableentryraw{Awarded 2nd place in the Abu Dhabi Solar Challenge (10,000 AED)}{\textsc{Khalifa University, Abu Dhabi, UAE}}{spaceafter}
 
-	\tableentryraw{Graduated honors with distinction (2,000 AED)}{\textsc{Khalifa University, Abu Dhabi, UAE}}{}
+	\tableentryraw{Recognition for volunteering for the graduate School and student affair's events}{\textsc{Khalifa University, Abu Dhabi, UAE}}{spaceafter}
+
+	\tableentryraw{Graduated honors with distinction (2,000 AED)}{\textsc{Khalifa University, Abu Dhabi, UAE}}{spaceafter}
 	
 	%------------------------------------------------
 	
@@ -425,14 +427,16 @@
 
 %------------------------------------------------
 
-\textbf{\large Submitted preprints}\medskip \hrule \medskip
+% \textbf{\large Submitted preprints}\medskip \hrule \medskip
 
-\longformpublication{
-A. Khalil, \textbf{K. Al Handawi}, Z. Mohsen, A. Abdel Nour, R. Feghali, I. Chamseddine and M. Kokkolaras (2021). Predicting COVID-19 incidences from patients’ viral load using deep-learning. \textit{medRxiv}} \href{https://doi.org/10.1101/2021.08.14.21262064}{doi: 10.1101/2021.08.14.21262064}
+% \longformpublication{
+% A. Khalil, \textbf{K. Al Handawi}, Z. Mohsen, A. Abdel Nour, R. Feghali, I. Chamseddine and M. Kokkolaras (2021). Predicting COVID-19 incidences from patients’ viral load using deep-learning. \textit{medRxiv}} \href{https://doi.org/10.1101/2021.08.14.21262064}{doi: 10.1101/2021.08.14.21262064}
 
 %------------------------------------------------
 
 \textbf{\large Refereed Journal Articles}\medskip \hrule \medskip
+
+\longformpublication{A. Khalil, \textbf{K. Al Handawi}, Z. Mohsen, A. Abdel Nour, R. Feghali, I. Chamseddine and M. Kokkolaras (2022). Weekly nowcasting of new COVID-19 cases using past viral load measurements. \textit{Viruses}, \textit{14}(7): pp 1414. \href{https://www.mdpi.com/1999-4915/14/7/1414}{doi: 10.3390/V14071414}}
 
 \longformpublication{\textbf{K. Al Handawi} and M. Kokkolaras (2021). Optimization of infectious disease prevention and control policies using artificial life. \textit{IEEE Transactions on Emerging Topics in Computational Intelligence}, \href{https://doi.org/10.1109/TETCI.2021.3107496}{doi: 10.1109/TETCI.2021.3107496}
 ~\textit{funded by an NSERC discovery grant}}
