--- a/Khalil_CV.tex
+++ b/Khalil_CV.tex
@@ -215,6 +215,19 @@
 	
 	%------------------------------------------------
 
+	\workposition{Sep 2021 -- Dec 2021} % Duration
+	{} % FT/PT (full time or part time)
+	{Systems Engineering Design Lab, Chalmers University of Technology} % Employer
+	{G\"{o}teborg, Sweden} % Location
+	{Postdoctoral Researcher} % Job title
+	{}{} % Description
+	\tableentry{$\bullet$}{Integrate my doctoral research on design under uncertainty into the activities of the SED lab.}{}
+	\tableentry{$\bullet$}{Develop a margin analysis library for change propagation management in engineering systems: \href{https://sed-group.github.io/mvmlib/notebooks/strut_example.html}{https://sed-group.github.io/mvmlib/notebooks/strut\_example.html}.}{}
+	\tableentry{$\bullet$}{Conduct research into design margins and links to probabilistic quantities such as reliability.}{}
+	\tableentry{$\bullet$}{Foster collaborations with the industry (GKN Aerospace) and write research proposals.}{spaceafter}
+
+	%------------------------------------------------
+
 	\workposition{Jan 2021 -- Apr 2022} % Duration
 	{} % FT/PT (full time or part time)
 	{Systems Optimization Lab, McGill University} % Employer
@@ -226,19 +239,6 @@
 	\tableentry{$\bullet$}{Applied novel stochastic optimization techniques for hyperparameter optimization problems in machine learning and used them to fine tune the sequence-to-sequence model.}{}
 	\tableentry{$\bullet$}{Built and published a stochastic model of the spread of COVID-19 in a population using artificial life models (agent-based approaches) and used stochastic optimization algorithms to solve for optimal public health policies \href{https://github.com/khbalhandawi/COVID_SIM_GPU}{https://github.com/khbalhandawi/COVID\_SIM\_GPU}.}{}
 	\tableentry{$\bullet$}{Lectured the engineering systems optimization class and developed MATLAB training modules and projects related to multidisciplinary optimization (NoHiMDO) with applications to aircraft design.}{spaceafter}
-
-	%------------------------------------------------
-
-	\workposition{Sep 2021 -- Dec 2021} % Duration
-	{} % FT/PT (full time or part time)
-	{Systems Engineering Design Lab, Chalmers University of Technology} % Employer
-	{G\"{o}teborg, Sweden} % Location
-	{Postdoctoral Researcher} % Job title
-	{}{} % Description
-	\tableentry{$\bullet$}{Integrate my doctoral research on design under uncertainty into the activities of the SED lab.}{}
-	\tableentry{$\bullet$}{Develop a margin analysis library for change propagation management in engineering systems.}{}
-	\tableentry{$\bullet$}{Conduct research into design margins and links to probabilistic quantities such as reliability.}{}
-	\tableentry{$\bullet$}{Foster collaborations with the industry (GKN Aerospace) and write research proposals.}{spaceafter}
 
 	%------------------------------------------------
 
