--- a/Khalil_CV_semiacademic.tex
+++ b/Khalil_CV_semiacademic.tex
@@ -253,7 +253,7 @@
 	\tableentry{$\bullet$}{Developed a thermomechanical simulation model for modeling additive manufacturing repair and life extension processes using transient coupled thermal/mechanical FEA simulations.}{}
 	\tableentry{$\bullet$}{Write automation scripts using NX Siemens and Abaqus Python APIs to automate geometry generation, meshing, anaylsis, and postprocessing of parametric simulations.}{}
 	\tableentry{$\bullet$}{Co-developed a novel lifecycle cost model based on system dynamics to model the effect of life extension on lifecycle costs.}{}
-	\tableentry{$\bullet$}{Used machine learning models to substitute expensive thermomechanical simulations in design studies and developed a variant of kernel smoothing for estimating the sensitivity of design solutions to different requirements by using a Jacobian matrix.}{spaceafter}
+	\tableentry{$\bullet$}{Used machine learning models to substitute expensive thermomechanical simulations in design studies and developed a variant of kernel smoothing for estimating the sensitivity of design solutions to different requirements by using a Jacobian matrix \href{https://scale-am.herokuapp.com/}{https://scale-am.herokuapp.com/.}}{spaceafter}
 
 	%------------------------------------------------
 
