--- a/Khalil_CV.tex
+++ b/Khalil_CV.tex
@@ -211,7 +211,9 @@
 	{}{} % Description
 	\tableentry{$\bullet$}{Won a Natural Sciences and Engineering Research Council of Canada (NSERC) fellowship to pursue research at UdeM.}{}
 	\tableentry{$\bullet$}{Work with the International Air Transport Association (IATA) to develop data analytics solutions for codesharing and flight scheduling in the civil aviation industry.}{}
-	\tableentry{$\bullet$}{Assess the effectiveness and impact of the IATA operation safety audit (IOSA) on air travel accessibility and cooperation between airlines.}{spaceafter}
+	\tableentry{$\bullet$}{Assess the effectiveness and impact of the IATA operation safety audit (IOSA) on air travel accessibility and cooperation between airlines.}{}
+	\tableentry{$\bullet$}{Construct a mariaDB mySQL database for storing flight records spanning the last decade for research purposes.}{}
+	\tableentry{$\bullet$}{Leverage unsupervised learning and expectation maximization algorithms to discover latent variables in the IATA dataset.}{spaceafter}
 	
 	%------------------------------------------------
 
